# XY7320

./: .gitignore  AGENTS.md  README.md  XY7320_FSM_Animation.html  mOTA移植步骤.md
.trae/documents/: obsidian-docs-reorganization.md
Common/: app_version_config.c  app_version_config.h
XY7320/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  CMakePresets.json  STM32F407ZGTX_FLASH.ld  XY7320.ioc  check_cmake_sync.ps1  patch_bootloader_version_flag.ps1
XY7320/App/: App_Main.cpp  App_Main.h
XY7320/App/mode_manager/: fsm.h  mode_manager.cpp  mode_manager.h  mode_types.h
XY7320/App/usecase/: task_gnss.cpp  task_gnss.h  task_led.cpp  task_led.h  task_state_adc_a.cpp  task_state_adc_a.h  task_state_adc_b.cpp  task_state_adc_b.h  task_state_dmr.cpp  task_state_dmr.h  task_state_gsm.cpp  task_state_gsm.h  task_state_idle.cpp  task_state_idle.h  task_update.cpp  task_update.h
XY7320/BSP/adc/: bsp_adc.c  bsp_adc.h
XY7320/BSP/flash/: bsp_flash.c  bsp_flash.h
XY7320/BSP/gpio/: bsp_gpio.c  bsp_gpio.h
XY7320/BSP/tim/: bsp_tim_capture.c  bsp_tim_capture.h  bsp_tim_os.c  bsp_tim_os.h
XY7320/BSP/uart/: bsp_uart.c  bsp_uart.h  bsp_uart_rcv.c  bsp_uart_rcv.h
XY7320/Common/config/: app_config.h  bsp_config.h  calibration_config.h  os_config.h
XY7320/Core/Inc/: app_update_config.h  dma.h  stm32f4xx_it.h  tim.h  usart.h
XY7320/Core/Src/: adc.c  app_update_config.c  dma.c  gpio.c  main.c  minimal_runtime.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  uart_callbacks.cpp  usart.c
XY7320/Domain/filter/: Oscilloscope.cpp  Oscilloscope.h
XY7320/Domain/measurement/: dmr_power_measurement.cpp  dmr_power_measurement.h  gsm_power_measurement.cpp  gsm_power_measurement.h
XY7320/Domain/model/: calibration_table.cpp  calibration_table.h
XY7320/Domain/protocol/: configurations.h  protocol_gnss.cpp  protocol_gnss.h  protocol_xy.cpp  protocol_xy.h
XY7320/Domain/version_frame/: version_frame.c  version_frame.h
XY7320/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_uart.c
XY7320/Services/adc_service/: adc_service.cpp  adc_service.h
XY7320/Services/gnss_service/: gnss_service.cpp  gnss_service.h
XY7320/Services/input_capture_service/: input_capture_service.cpp  input_capture_service.h
XY7320/Services/led_service/: led_service.cpp  led_service.h
XY7320/Services/log/: log_service.cpp  log_service.h
XY7320/Services/uart_service/: protocol_service.cpp  protocol_service.h  uart_tx_service.cpp  uart_tx_service.h
XY7320/Services/upgrade/: update_service.cpp  update_service.h  version_store.cpp  version_store.h
XY7320/System/scheduler/: os.c  os.h
XY_bootloadr/: .cproject  .project  CMakeLists.txt  CMakeLists_template.txt  STM32F407ZGTX_FLASH.ld  XY_bootloadr.ioc  stm32f4discovery.cfg
XY_bootloadr/Core/Inc/: app_version_config.h  stm32f4xx_it.h
docs/: README.md
docs/.obsidian/: hotkeys.json  workspace.json
docs/00-Index/: 当前进度.md  文档地图.md  项目总览.md  项目结构.md  首页.md
docs/00-索引/: 00-项目索引.md  标签定义.md
docs/01-核心参考/: APP工程配置.md  Bootloader开发指南.md  RTOS接入注意事项.md  硬件参考.md
docs/02-mOTA与升级/: mOTA移植指南.md  mOTA移植验收清单.md  升级协议概述.md  简化升级协议.md
docs/03-上位机/: Qt6架构设计.md  XY7320Host上位机说明.md
docs/04-项目管理/: 开发日志.md  开发路线.md  系统架构设计.md  踩坑记录.md
docs/05-工程工具/: CMake与STM32工程笔记.md  GCC裸机开发笔记.md
docs/10-项目规范/: Git管理笔记.md  命名与注释规范.md  架构规范.md
docs/20-开发记录/: 决策记录.md  开发日志.md  踩坑记录.md
docs/30-工程资料/: 工程资料总览.md
docs/40-上位机/: Qt6+CMake+QML工业项目架构说明.md  XY7320Host串口升级上位机说明.md  上位机资料总览.md
docs/90-归档/: 旧目录迁移说明.md
docs/_templates/: 技术参考模板.md  踩坑记录模板.md
docs/cmake-stm32/: cmake-stm32-notes.md  链接脚本与启动流程.md
docs/mota/: mOTA移植步骤.md  串口移植与升级流程规划.md
docs/project-docs/: project-notes.md  上下位机综合项目开发路线.md  串口升级固定码握手流程.md  原项目系统结构与理解深度要求.md  开发日志.md  踩坑记录.md  项目笔记.md  项目结构.md
docs/qt/: Qt6+CMake+QML工业项目架构说明.md  XY7320Host串口升级上位机说明.md
tools/QtUpgradeDemo/: CMakeLists.txt  Main.qml  README.md  firmwareuploader.cpp  firmwareuploader.h  main.cpp
tools/XY7320Host/: CMakeLists.txt  Main.qml  main.cpp  src.qrc
tools/XY7320Host/backend/: FirmwareUploader.cpp  FirmwareUploader.h  SerialDebug.cpp  SerialDebug.h  SerialPortManager.cpp  SerialPortManager.h  usbmanager.cpp  usbmanager.h
tools/XY7320Host/build-log-check/XY7320Host/: Main.qml  XY7320Host_qml_module_dir_map.qrc  qmldir
tools/XY7320Host/build-log-check/XY7320Host/components/: ECard.qml  EInput.qml  EProgressBar.qml
tools/XY7320Host/build-log-check/XY7320Host/pages/: MeasurementPage.qml  SettingsPage.qml  UpgradePage.qml  UsbPage.qml  qmldir
tools/XY7320Host/build-log-check/XY7320Host_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
tools/XY7320Host/build-log-check/XY7320Host_autogen/FVSNT77ZGO/: moc_FirmwareUploader.cpp  moc_FirmwareUploader.cpp.json  moc_SerialDebug.cpp  moc_SerialDebug.cpp.json  moc_SerialPortManager.cpp  moc_SerialPortManager.cpp.json  moc_usbmanager.cpp  moc_usbmanager.cpp.json
tools/XY7320Host/components/: EAlertDialog.qml  EBlurCard.qml  EButton.qml  ECard.qml  ECheckBox.qml  EDataTable.qml  EDropdown.qml  EInput.qml  EList.qml  ELoader.qml  EProgressBar.qml  ESwitchButton.qml  ETheme.qml  EToast.qml
tools/XY7320Host/pages/: LogsPage.qml  SerialDebugPage.qml  SettingsPage.qml  UpgradePage.qml
usart/: AGENTS.md  ui_preview.html
usart/SerialAssistant/: CMakeLists.txt  README.md  app_icon.rc  main.cpp  qml.log.err
usart/SerialAssistant/LICENSES/: EvolveUI-MIT.txt
usart/SerialAssistant/backend/console/: console_controller.cpp  console_controller.h  text_codec.cpp  text_codec.h  transmit_controller.cpp  transmit_controller.h
usart/SerialAssistant/backend/io/: serial_port_controller.cpp  serial_port_controller.h
usart/SerialAssistant/backend/settings/: settings_manager.cpp  settings_manager.h
usart/SerialAssistant/models/: console_record_model.cpp  console_record_model.h
usart/SerialAssistant/qml/: Main.qml
usart/SerialAssistant/qml/components/: EDropdown.qml  EOptRow.qml  EPaneCard.qml  MaterialIcon.qml
usart/SerialAssistant/qml/components/cards/: ReceivePaneCard.qml  SendPaneCard.qml
usart/SerialAssistant/qml/components/settings/: SettingsPanel.qml
(+46 files in other folders)
